Version header correction on mobile

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,9 +10,10 @@ html, body
   height: auto
   margin: 0 auto (-92px)
   padding: 0 0 92px
+.navbar-header
+  float: left
 
-.navbar-brand
-  .glyphicon
+  .navbar-brand .glyphicon
     margin-right: 10px
 
 .btn
